<resources>
    <string name="app_name" translatable="false">RoadHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">RoadHelp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_wstest">WSTestActivity</string>
    <string name="textview">TextView</string>
    <string name="title_activity_registration">Registration</string>
    <string name="action_registration">Registration</string>
    <string name="prompt_login_name">Login</string>
    <string name="prompt_phone">Phone number</string>
    <string name="phone">Phone</string>
    <string name="title_preference">Preferences</string>
    <string name="region_list">Regions</string>
    <string name="auto_sign">Auto sign</string>
    <string name="regionSpinnerTitle">Regions</string>
    <string name="remote_service_started">RoadHelper started!</string>
    <string name="remote_service_crashed">remote_service_crashed</string>
    <string name="SuccessSignIn">Entered successeful</string>
    <string name="Your_help">Your help</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Requests_on_map">Request on map</string>
    <string name="CommonChat">Chat</string>
    <string name="Settings">Settings</string>
    <string name="AboutProgram">About</string>
    <string name="Achievments">Achievments</string>
    <string name="aboutfragment">About Road helper service</string>
    <string name="point_1">Сервис создан для того, чтобы водители помогали друг другу в сложных ситуациях</string>
    <string name="no_photo">No photo</string>
    <string name="SignOff">Sign off</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="SelectRegion">Select region</string>
    <string name="Select">Select</string>
    <string name="change_field">(to change)</string>
    <string name="view_app_logs">View app logs</string>
    <string name="ClearLog">Clear log</string>
    <string name="SuccessSave">Save success</string>
    <string name="RefreshComplete">Refresh success</string>
    <string name="change_password_button">Change password</string>
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_repeat_new_password">Repeat new pass</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="trTypeSpinnerTitle">Transmission type</string>
    <string name="selectToolTypes">Select tool types</string>
    <string name="transmission_type">Transmission type</string>
    <string name="car_model">Car model</string>
    <string name="tool_types">Tool types</string>
    <string name="region">Region</string>
    <string name="title_activity_request_main" translatable="false">RequestMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_passwords_not_repeated">Passwords not equal</string>
    <string name="send">Send</string>
    <string name="write_a_message">Write a message...</string>
    <string name="msg_subscribe_failed">Subscribe failed</string>
    <string name="msg_subscribed">Subscribe success</string>
    <string name="message_sample_time" translatable="false">16:35</string>
    <string name="output_message__sample_text" translatable="false">Output message text</string>
    <string name="input_message_sample_text" translatable="false">How are you doing? This is a long message that should probably wrap.</string>
    <string name="from">From</string>
    <string name="system_message" translatable="false">system_message_sample</string>
    <string name="Active_RequestsList">Active request list</string>
    <string name="DecsriptSituation">Situation descript</string>
</resources>
