<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Your_help" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Requests" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/CommonChat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Settings" />


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about_program"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/AboutProgram" />
            <item
                android:id="@+id/nav_achievments"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Achievments" />
        </menu>
    </item>
    </group>
</menu>
